# ciut-riesgo

./: .env.example  .gitattributes  .gitignore  README.md  _quarto.yml  config.py  edificaciones.qmd  esperanza.qmd  exposicion.qmd  plan.ipynb  pyproject.toml  references.bib  renabap.qmd  renabap.quarto_ipynb  suavizacion.qmd  twi.qmd  villa-del-rosario.ipynb  vulnerabilidad.qmd
docs/: ROADMAP.md  SETUP.md  edificaciones.html  exposicion.html  index.html  intro.html  references.html  renabap.html  renabap_final.html  robots.txt  search.json  sitemap.xml  suavizacion.html  twi.html  vulnerabilidad.html
notebooks/: analisis.ipynb  peligro_raster.ipynb  plan.ipynb  renabap.ipynb  renabap_final.py  riesgo.ipynb  suavizar.ipynb  twi.ipynb  vulnerabilidad.ipynb
notebooks/ciut-riesgo-notebooks/: _quarto.yml  renabap.qmd
notebooks/ciut-riesgo-notebooks/_book/: index.html  intro.html  references.html  search.json  summary.html
notebooks/ciut-riesgo-notebooks/docs/: index.html  search.json
notebooks/data/: barrio_wide.csv  cuenca_wide.csv  peligro_raster_10m.tif  twi.tif
project-docs/: SETUP.md
rendered/: index.html  summary.html
tools/: qmd_ruff.py
utils/: utils.py
