[project]
name = "dev"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "contextily>=1.6.2",
    "folium>=0.19.6",
    "geopandas>=1.0.1",
    "google-cloud-filestore>=1.13.1",
    "google-cloud-storage>=3.1.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.19.0",
    "ruff>=0.11.11",
]
