[project]
name = "ciut-riesgo"
version = "0.1.0"
description = "Analisis de riésgo de inundaciones para el Partido de La Plata"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.39.7",
    "botocore>=1.39.7",
    "contextily>=1.6.2",
    "dask[complete]>=2025.7.0",
    "duckdb>=1.3.2",
    "folium>=0.19.6",
    "geedim>=2.0.0",
    "geemap>=0.36.2",
    "geopandas>=1.0.1",
    "google-cloud-filestore>=1.13.1",
    "google-cloud-storage>=3.1.0",
    "ipykernel>=6.29.5",
    "itables>=2.4.4",
    "jenkspy>=0.4.1",
    "jupyter>=1.1.1",
    "leafmap>=0.51.0",
    "localtileserver>=0.10.6",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.3",
    "matplotlib-map-utils>=3.1.0",
    "matplotlib-scalebar>=0.9.0",
    "openpyxl>=3.1.5",
    "owslib>=0.34.1",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "pyarrow>=20.0.0",
    "pysheds>=0.5",
    "python-dotenv>=1.1.0",
    "rasterstats>=0.20.0",
    "rioxarray>=0.19.0",
    "ruff>=0.11.11",
    "s2sphere>=0.2.5",
    "s3fs>=0.4.2",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tobler>=0.12.1",
    "xdem>=0.1.6",
    "xee>=0.0.20",
]
